# excel-business-budget-generator-pro

./: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts
docs/: BUG_FIX_SUMMARY.md  CODE_REVIEW_PROGRESS.md  DEPLOY_TO_GITHUB.md  FEATURES_SUMMARY.md  GITHUB_UPLOADED.md  IMPLEMENTATION_PLAN.md  RECURRING_IMPLEMENTED.md
scripts/: generate-icons.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Analysis.tsx  AppLayout.tsx  Dashboard.tsx  DataImport.tsx  ExportGenerator.tsx  ModuleManager.tsx  Settings.tsx  SetupWizard.tsx  TransactionLog.tsx  WelcomeScreen.tsx
src/components/layout/: AppLayout.tsx
src/components/ui/: AlertsDrawer.tsx  ThemeToggle.tsx  button.tsx  dialog.tsx  radio-group.tsx
src/guidelines/: IMPLEMENTATION_DOCS.md
src/i18n/: index.ts
src/i18n/locales/: de-CH.ts
src/lib/: alerts.ts  compute.ts  csv.ts  export.ts  format.ts  persistence.ts  recurring.ts  trends.ts
src/mock/: fixtures.ts
src/pages/: Analysis.tsx  CategoryManager.tsx  Dashboard.tsx  DataImport.tsx  DebtsManager.tsx  ExportGenerator.tsx  GoalsManager.tsx  ModuleManager.tsx  RecurringManager.tsx  Settings.tsx  SetupWizard.tsx  TransactionLog.tsx  WelcomeScreen.tsx
src/store/: index.ts  persist.ts
src/store/slices/: alertsSlice.ts  appConfigSlice.ts  dataSlice.ts  debtsSlice.ts  exportSlice.ts  goalsSlice.ts  importSlice.ts  modulesSlice.ts  navigationSlice.ts  recurringSlice.ts
src/styles/: globals.css
src/theme/: tech-tokens.ts
src/types/: finance.ts  import.ts
